--- a/HW9/index.html
+++ b/HW9/index.html
@@ -11,32 +11,45 @@
 
 <body>
 	<!-- <div class="todo">
-		<h3 class="todo__title">ToDo list</h3>
+		<div class="todo__heder">
+			<div class="todo__data">ВС 2 февраля</div>
+			<h3 class="todo__title">10 дел</h3>
+		</div>
 		<input class="todo__field_name" type="text" placeholder="type youe task...">
 		<ul class="todo__list">
 			<li class="todo__item">
 				<input type="checkbox" class="todo__status">
 				<span class="todo__name">Lorem, ipsum dolor.</span>
+				<button class="todo__btn todo__btn_edit">edit</button>
+				<button class="todo__btn todo__btn_delete">del</button>
 			</li>
 			<li class="todo__item">
 				<input type="checkbox" class="todo__status">
 				<span class="todo__name">Mollitia, at aperiam!</span>
+				<button class="todo__btn todo__btn_edit">edit</button>
+				<button class="todo__btn todo__btn_delete">del</button>
 			</li>
 			<li class="todo__item">
 				<input type="checkbox" class="todo__status">
 				<span class="todo__name">Ratione, a eum!</span>
+				<button class="todo__btn todo__btn_edit">edit</button>
+				<button class="todo__btn todo__btn_delete">del</button>
 			</li>
 			<li class="todo__item">
 				<input type="checkbox" class="todo__status">
-				<span class="todo__name">Dolore, laborum impedit?</span>
+				<span class="todo__name">Dol</span>
+				<button class="todo__btn todo__btn_edit">edit</button>
+				<button class="todo__btn todo__btn_delete">del</button>
 			</li>
 			<li class="todo__item">
 				<input type="checkbox" class="todo__status">
 				<span class="todo__name">Optio, ea libero!</span>
+				<button class="todo__btn todo__btn_edit">edit</button>
+				<button class="todo__btn todo__btn_delete">del</button>
 			</li>
 		</ul>
-		<button class="todo__btn_clear">Clear</button>
-	</div> -->
+		<button class="todo__btn_clear">Clear all</button> -->
+	</div>
 
 	<script src="js/scripts.js"></script>
 </body>
